--- a/.github/workflows/autodeploy.yml
+++ b/.github/workflows/autodeploy.yml
@@ -22,6 +22,6 @@ jobs:
         - name: Deploy
           uses: peaceiris/actions-gh-pages@v3
           with:
-            deploy_key: ${{ secerts.ACTIONS_DEPLOY_KEY }}
+            deploy_key: ${{ secrets.ACTIONS_DEPLOY_KEY }}
             publish_dir: ./out
 
