--- a/.github/workflows/autodeploy.yml
+++ b/.github/workflows/autodeploy.yml
@@ -10,7 +10,7 @@ jobs:
       steps:
         - uses: actions/checkout@master
           with:
-            uses: main
+            ref: main
         - uses: actions/setup-node@v2
           with:
             node-version: '14'
